[package]
name = "kv-store"
author = "Oserefemhen-Ativie"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "0.21.0"                                  # Database engine
clap = { version = "4.4", features = ["derive"]}    # CLI argument parsing
serde = { version = "1.0", features = ["derive"]}   # Serialization
serde_json = "1.0"                                  # JSON handling
snap = "1.1"                                        # Compression
